fix homepage collection tile centering on mobile

--- a/srcmedia/scss/pages/_home.scss
+++ b/srcmedia/scss/pages/_home.scss
@@ -54,6 +54,7 @@
             margin: 0;
             width: 100%;
             align-content: center;
+            align-items: center;
             flex-direction: column;
 
             @media (min-width: $tablet) {
